Changelog (English)
===================

2.0.2
Fixed an architecture emulation via binfmt_misc
Fixed Arch Linux bootstrap (+libnghttp2, -xorg-utils)
Fixed issue of launching Xfce and Mate (issue #807)
Added file system check (issue #785)

2.0.1
Added Fedora 25 (issue #683)
Fixed Arch Linux bootstrap (issue #699)
Fixed Fedora and CentOS bootstrap (issue #646)

2.0.0
The application interface is rewritten with Material Design
Completed transition to the new CLI
Added support Debian 9 (stretch), Fedora 24 and Ubuntu 16.10 (yakkety)
Added support for work without root permissions (based on PRoot)
Added interface for managing from TELNET (based on telnetd)
Added web interface (based on httpd, websocket.sh and xterm.js)
Added synchronization of the operating environment with server or other device
Added function to generate a random password for user (instead changeme)
Added function to track changes in the network and update the current container
Added ability to add users to groups aid_ * from the application interface
Added support for initialization systems run-parts and sysv
Added an option to keep CPU running to do work while the screen is off
Added an option to change the delay of start after opening XServer XSDL
Added stealth mode
Added ability to send notifications from a container through am
Added MATE desktop environment
Removed GNOME and KDE desktop environments
Extended syntax description of mount points, you can now specify to mount /from/dir:/to/dir
Restore Android after closing Xorg session in framebuffer mode
Make an unified container profiles for CLI and the application interface
Created a repository of containers
Added autostart delay

1.5.6
Fixed apt resolve in stretch and xenial
Added support kali-rolling in Kali Linux
Added target type "Auto" for manual prepare target path
Added timestamp support to log filename (${TIMESTAMP} variable)
End of support Debian Squeeze and Kali Moto
Added support /dev/net/tun (for OpenVPN)