@@ -8,7 +8,7 @@ android {
         applicationId 'ru.meefik.linuxdeploy'
         minSdkVersion 10
         targetSdkVersion 25
-        versionCode 221
+        versionCode 223
         versionName "2.0.2"
     }
     buildTypes {
