@@ -6,6 +6,7 @@ Fixed an architecture emulation via binfmt_misc
 Fixed Arch Linux bootstrap (+libnghttp2, -xorg-utils)
 Fixed issue of launching Xfce and Mate (issue #807)
 Added file system check (issue #785)
+Added custom target type
 
 2.0.1
 Added Fedora 25 (issue #683)
@@ -374,6 +375,7 @@ Updated list packages of base system installation
 Исправлен установщик Arch Linux (+libnghttp2, -xorg-utils)
 Исправлена проблема запуска Xfce и Mate (тикет #807)
 Добавлена проверка файловой системы (тикет #785)
+Добавлен пользовательский тип установки
 
 2.0.1
 Добавлена поддержка Fedora 25 (тикет #683)
